{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 118,
  "lineage": "11f30605-1eac-d2de-bf27-d300f2c9ab25",
  "resources": [
    {
      "module": "module.efs_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.efs_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:515609745446:security-group/sg-06fcc114996e8bcf8",
            "description": "security group for efs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fcc114996e8bcf8",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Ingress Rule",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg-20230818085712351800000002",
            "name_prefix": "efs_sg-",
            "owner_id": "515609745446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_sg"
            },
            "tags_all": {
              "Name": "efs_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-06940fa7d54c44297"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "0b82edb6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:515609745446:security-group/sg-0e9668d3f0ebed89d",
            "description": "security group for efs",
            "egress": [],
            "id": "sg-0e9668d3f0ebed89d",
            "ingress": [],
            "name": "efs_sg-20230818081547360000000002",
            "name_prefix": "efs_sg-",
            "owner_id": "515609745446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_sg"
            },
            "tags_all": {
              "Name": "efs_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0fa9356043783391d"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2306597526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06fcc114996e8bcf8",
            "security_group_rule_id": "sgr-053a1c64b743cdc85",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs_security_group.aws_security_group.this",
            "module.efs_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.efs_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": "Ingress Rule",
            "from_port": 2049,
            "id": "sgrule-4091946611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fcc114996e8bcf8",
            "security_group_rule_id": "sgr-06e22e302a08155ee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs_security_group.aws_security_group.this",
            "module.efs_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}